[package]
name = "advent-of-code-2022"
version = "0.18.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
nom = "7"

[workspace]
members = ["day-*"]

[[bin]]
name = "today"
path = "day-16/src/main.rs"
